windows client fix. fixed crush on image copy or when clipboard are empty

--- a/windows_client/CMakeLists.txt
+++ b/windows_client/CMakeLists.txt
@@ -9,7 +9,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../json/ json)
 include_directories(../socket-cpp/Socket)
 include_directories(../json/include)
 
-set(CMAKE_CXX_FLAGS "-mwindows")
+#set(CMAKE_CXX_FLAGS "-mwindows")
 
 add_executable(${PROJECT_NAME} main.cpp server.cpp server.h client.cpp client.h)
 target_link_libraries(${PROJECT_NAME} socket nlohmann_json)
